--- a/views/updateForm.ejs
+++ b/views/updateForm.ejs
@@ -72,7 +72,7 @@
 			
 
 		<input type="submit" value="update">
-		<input type="button" onclick="window.location.href='http://localhost:8099/main'"  value="back yo home">
+		<input type="button" onclick="window.location.href='http://localhost:8099/main'"  value="back to home">
 		</form>
 		<% if (error.length > 0) { %>
 			<div class="alert alert-warning">
