--- a/views/docunmentPage.ejs
+++ b/views/docunmentPage.ejs
@@ -9,6 +9,6 @@
 				<li>Name: <a href='/main/display?_id=<%= restaurant[i]._id %>'><%= restaurant[i].name %></a></li>
 			<% } %>
 		</ol>
-		<input type="button" onclick="window.location.href='http://localhost:8099/main'"  value="back">
+		<input type="button" onclick="window.location.href='/main'"  value="back">
 	</body>
 </html>
