--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,6 +10,6 @@
 		<a href=/main/createPage>Create</a><br>
 		<a href=/main/docunmentPage?owner=<%= Username%>>All your docunment</a><br>
 		
-		<input type="button" onclick="window.location.href='http://localhost:8099/'"  value="back">
+		<input type="button" onclick="window.location.href='/'"  value="back">
 	</body>
 </html>
