--- a/views/ratePage.ejs
+++ b/views/ratePage.ejs
@@ -7,7 +7,7 @@
 			<input name="owner" type="hidden" value=' <%=owner %>'>
 			<input type="submit" value="rate"></form>
 			</body>
-			<input type="button" onclick="window.location.href='http://localhost:8099/main'"  value="back to home">
+			<input type="button" onclick="window.location.href='/main'"  value="back to home">
 		<% if (error.length > 0) { %>
 		<div class="alert alert-warning">
 		<strong>Warning!</strong> <%= error%>
