--- a/views/registerForm.ejs
+++ b/views/registerForm.ejs
@@ -3,12 +3,12 @@
 		<title>Register Form</title>
 	</head>
 	<body>
-		<form action='http://localhost:8099/register' method="post">
+		<form action='/register' method="post">
 			*Username: <input name="name" type="text"><br>
 			*Password: <input name="password" type="password"><br>
 			*Confirm Password: <input name="confirmPassword" type="password"><br>
 			<input type="submit" value="Register">
-			<input type="button" onclick="window.location.href='http://localhost:8099/'"  value="back">
+			<input type="button" onclick="window.location.href='/'"  value="back">
 		</form>
 		<a>* is the required field</a>
 		<br>
