--- a/views/createPage.ejs
+++ b/views/createPage.ejs
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<h1>Create New Restaurant</h1>
-		<form action='http://localhost:8099/main/create' id="createForm" method="post" enctype="multipart/form-data">
+		<form action='/main/create' id="createForm" method="post" enctype="multipart/form-data">
 		*name:<input name="name" value=''><br>
 		borough:<input name="borough" value=''><br>
 		cuisine:<input name="cuisine" value=''><br>
@@ -15,7 +15,7 @@
 		lat_corrd:<input name="lat_corrd" value=''><br>
 		photo:<input name="photo" type="file"" value=''><br>
 		<input type="submit" value="create">
-		<input type="button" onclick="window.location.href='http://localhost:8099/main'"  value="back">
+		<input type="button" onclick="window.location.href='/main'"  value="back">
 		</form>
 			<a>* is the required field</a>
 			<br>
